@@ -13,6 +13,7 @@ TEMPLATES_HEADING_ASSIGNED=Assigned
 TEMPLATES_HEADING_HOME=Home
 TEMPLATES_HEADING_STYLE_NAME=Style Name
 TEMPLATES_HEADING_TEMPLATE=Template
+TEMPLATES_HEADING_CLIENT=Location
 
 TEMPLATES_OPTION_ADMINISTRATOR=Administrator
 TEMPLATES_OPTION_SITE=Site
@@ -42,12 +43,12 @@ CONFIG__DEFAULT=Basic Options
 
 TEMPLATES_SUCCESS_N_DUPLICATED=%d styles successfully duplicated.
 
-TEMPLATES_FILTER_CLIENT=Filter Client:
+TEMPLATES_FILTER_CLIENT=- Location -
 TEMPLATES_FILTER_TEMPLATE=- Template -
 
 TEMPLATES_TEMPLATES_FILTER_SEARCH_DESC=Search in template name or folder name.
 TEMPLATES_CLICK_TO_ENLARGE=Click to enlarge.
-TEMPLATES_NO_PREVIEW=No preview
+TEMPLATES_PREVIEW=Preview
 TEMPLATES_MANAGER_VIEW_TEMPLATE=Template Manager: View Template
 
 
@@ -62,6 +63,8 @@ TEMPLATES_TEMPLATE_EDIT_OVERRIDE=Edit %s
 TEMPLATES_TEMPLATE_OVERRIDE_EXTENSION=Overrides for %s
 TEMPLATES_TEMPLATE_ADD_OVERRIDE=Add new layout override for a component or module
 TEMPLATES_TEMPLATE_ADD_CSS=Add new stylesheet
+
+
 
 # Refactor old stings:
 
