@@ -29,6 +29,8 @@ $ -> Language fix or change
 
 03-Nov-2009 Andrew Eddie
  ^ Change dtd of template install files to 1.6.
+ ^ Add client columns to template style and templates list; adjust client filters to be able to display all templates.
+ ^ Changed template preview handling into JHtml helper.
 
 29-Oct-2009 Ron Severdia
 ^ Template Manager change, new thumbnail preview
